--- a/.github/workflows/master_java-application.yml
+++ b/.github/workflows/master_java-application.yml
@@ -43,7 +43,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'java-application'
+          app-name: 'application-java'
           slot-name: 'Production'
           publish-profile: ${{ secrets.publishprofile }}
           package: '*.jar'
