--- a/.github/workflows/master_java-application.yml
+++ b/.github/workflows/master_java-application.yml
@@ -46,5 +46,5 @@ jobs:
           app-name: 'application-java'
           slot-name: 'Production'
           publish-profile: ${{ secrets.publishprofile }}
-          package: '${{ github.workspace }}/target/*.jar'
+          package: '.jar'
 
