--- a/.github/workflows/master_java-application.yml
+++ b/.github/workflows/master_java-application.yml
@@ -45,4 +45,4 @@ jobs:
           app-name: 'application-java'
           slot-name: 'Production'
           publish-profile: ${{ secrets.publishprofile }}
-          package: '*.jar'
+          package: '*.jar
